--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -2,7 +2,26 @@
 
 #content {
   width: 80%;
-  height: 86%;
+  min-height: 86%;
+  max-height: 86%;
   /* border: 1px dashed orange; */
-  padding: .8rem;
+  padding: 0.8rem;
+  overflow-y: auto;
+}
+
+#content::-webkit-scrollbar {
+  width: 4px; /* Remove scrollbar space */
+}
+#content::-webkit-scrollbar-thumb {
+  background: gray;
+  width: 200px;
+}
+#content::-webkit-scrollbar-track {
+  background-color: transparent;
+  height: 4px;
+
+}
+
+.project-div {
+  /* height: 50px; */
 }
